--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "webpack-dev-server --mode=development",
     "build": "webpack --mode=development",
-    "lint": "eslint './src/**/*.{ts,tsx}'",
+    "lint": "eslint './src/**/*.{ts,tsx, json}'",
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
@@ -17,6 +18,7 @@
     "webpack-cli": "^3.3.9"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.9",
     "@types/react": "^16.9.4",
@@ -30,6 +32,7 @@
     "eslint-config-prettier": "^6.3.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.15.1",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "sass-loader": "^8.0.0",
