--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,17 @@
 {
-    "eslint.validate": [
-        "javascript",
-        "javascriptreact",
-        {
-          "language": "typescript",
-          "autoFix": true
-        },
-        {
-          "language": "typescriptreact",
-          "autoFix": true
-        }
-    ],
+  "editor.formatOnSave": true,
+
+  "[javascript]": {
+    "editor.formatOnSave": false
+  },
+  "[javascriptreact]": {
+    "editor.formatOnSave": false
+  },
+
+  "eslint.autoFixOnSave": true,
+  "prettier.disableLanguages": ["javascript", "javascriptreact"],
+  "workbench.colorCustomizations": {
+    "tab.unfocusedActiveBorder": "#fff0"
+  },
+  "git.ignoreLimitWarning": true
 }
