--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.15.1",
+    "file-loader": "^4.2.0",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "sass-loader": "^8.0.0",
