--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9"
   },
@@ -23,6 +25,8 @@
     "@types/node": "^12.7.9",
     "@types/react": "^16.9.4",
     "@types/react-dom": "^16.9.1",
+    "@types/react-router": "^5.1.1",
+    "@types/react-router-dom": "^5.1.0",
     "@types/webpack": "^4.39.2",
     "@types/webpack-dev-server": "^3.1.7",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
