--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.15.1",
     "file-loader": "^4.2.0",
+    "html-loader": "^0.5.5",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
+    "resolve-url-loader": "^3.1.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.0",
