--- a/package.json
+++ b/package.json
@@ -1,52 +1,45 @@
 {
-  "name": "react-typescript",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "start": "webpack-dev-server --mode=development",
-    "build": "webpack --mode=development",
-    "lint": "eslint './src/**/*.{ts,tsx, json}'",
-    "lint:fix": "eslint . --fix"
-  },
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.11",
+    "@types/react": "16.9.5",
+    "@types/react-dom": "16.9.1",
     "classnames": "^2.2.6",
     "node-sass": "^4.12.0",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "react-scripts": "3.2.0",
+    "typescript": "3.6.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
-    "@types/jest": "^24.0.18",
-    "@types/node": "^12.7.9",
-    "@types/react": "^16.9.4",
-    "@types/react-dom": "^16.9.1",
     "@types/react-router": "^5.1.1",
-    "@types/react-router-dom": "^5.1.0",
-    "@types/webpack": "^4.39.2",
-    "@types/webpack-dev-server": "^3.1.7",
-    "@typescript-eslint/eslint-plugin": "^2.3.2",
-    "@typescript-eslint/parser": "^2.3.2",
-    "css-loader": "^3.2.0",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.15.1",
-    "file-loader": "^4.2.0",
-    "html-loader": "^0.5.5",
-    "jest": "^24.9.0",
-    "prettier": "^1.18.2",
-    "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "ts-loader": "^6.2.0",
-    "ts-node": "^8.4.1",
-    "typescript": "^3.6.3",
-    "webpack-dev-server": "^3.8.2"
+    "@types/react-router-dom": "^5.1.0"
   }
 }
