--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
     "classnames": "^2.2.6",
+    "draft-js": "^0.11.1",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
+    "@types/draft-js": "^0.10.37",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0"
   }
