--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/react-dom": "16.9.1",
     "classnames": "^2.2.6",
     "draft-js": "^0.11.1",
+    "draft-js-plugins-editor": "^3.0.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-render-html": "^0.6.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
