--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.9.1",
     "classnames": "^2.2.6",
     "draft-js": "^0.11.1",
+    "draft-js-export-html": "^1.4.1",
     "draft-js-plugins-editor": "^3.0.0",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
