--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "draft-js": "^0.11.1",
     "draft-js-export-html": "^1.4.1",
@@ -42,9 +43,11 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.9",
     "@types/draft-js": "^0.10.37",
     "@types/react-router": "^5.1.1",
     "@types/react-router-dom": "^5.1.0"
-  }
+  },
+  "proxy": "http://localhost:3001/"
 }
