--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "16.9.1",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "cloudinary-react": "^1.2.1",
     "draft-js": "^0.11.1",
     "draft-js-export-html": "^1.4.1",
     "draft-js-plugins-editor": "^3.0.0",
