--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "draft-js": "^0.11.1",
     "draft-js-export-html": "^1.4.1",
     "draft-js-plugins-editor": "^3.0.0",
+    "immutable": "3.x.x",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
@@ -44,10 +46,13 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
     "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.9",
     "@types/draft-js": "^0.10.37",
     "@types/react-router": "^5.1.1",
-    "@types/react-router-dom": "^5.1.0"
+    "@types/react-router-dom": "^5.1.0",
+    "jest": "^24.9.0"
   }
 }
