--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-render-html": "^0.6.0",
-    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "3.6.3"
@@ -30,6 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -51,8 +51,7 @@
     "@types/axios": "^0.14.0",
     "@types/classnames": "^2.2.9",
     "@types/draft-js": "^0.10.37",
-    "@types/react-router": "^5.1.1",
-    "@types/react-router-dom": "^5.1.0",
+    "@types/react-router-dom": "^5.1.3",
     "jest": "^24.9.0"
   }
 }
