--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-toastify": "^6.0.5",
     "typescript": "3.6.3"
   },
   "scripts": {
@@ -54,6 +55,7 @@
     "@types/classnames": "^2.2.9",
     "@types/draft-js": "^0.10.37",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-toastify": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "eslint": "^6.8.0",
